# SGEMM_HIP

./: CMakeLists.txt  HIP_NVIDIA.md  Makefile  README.md  environment.yml  hipBLAS_sgemm.cpp  plot_benchmark_results.py  sgemm.cpp
scripts/: kernel_10_autotuner.sh  kernel_9_autotuner.sh
src/: kernels.hpp  runner.cpp  runner.hpp  utils.hpp
src/kernels/: 10_kernel_warptiling.hpp  1_naive.hpp  2_kernel_global_mem_coalesce.hpp  3_kernel_shared_mem_blocking.hpp  4_kernel_1D_blocktiling.hpp  5_kernel_2D_blocktiling.hpp  6_kernel_vectorize.hpp  7_kernel_resolve_bank_conflicts.hpp  8_kernel_bank_extra_col.hpp  9_kernel_autotuned.hpp
